--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -375,6 +375,33 @@
                         android:textColor="@color/graytxt"
                         android:textSize="12dp"/>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="16dp">
+                    <CheckBox
+                        android:id="@+id/agree_checkbox4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="12dp"
+                        android:textSize="13dp"
+                        android:text="할인 혜택 알림 수신동의(선택)"
+                        android:textColor="@color/blacktxt"
+                        android:button="@drawable/checkbox_icon"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:gravity="left"
+                        android:text="이메일 / SMS / MMS"
+                        android:layout_marginLeft="36dp"
+                        android:textColor="@color/graytxt"
+                        android:textSize="12dp"/>
+                </LinearLayout>
             </LinearLayout>
             <Button
                 android:layout_width="match_parent"
