--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -28,7 +28,7 @@
 			android:textColor="@color/purple"
 			android:gravity="center"
 			android:ellipsize="end"
-			android:text="관심목록" />
+			android:text="관심 상품 목록" />
 
 		<View
 			android:layout_width="match_parent"
