수정 사항 업데이트

--- a/app/src/main/res/layout/activity_all_privatedael.xml
+++ b/app/src/main/res/layout/activity_all_privatedael.xml
@@ -42,7 +42,7 @@
                 android:layout_toRightOf="@id/title_back"
                 android:textColor="@color/purple"
                 android:textSize="16dp"
-                android:text="테마 여행" />
+                android:text="프라이빗딜" />
 
             <View
                 android:layout_width="match_parent"
