--- a/app/src/main/res/layout/layout_detail_hotel_room_item.xml
+++ b/app/src/main/res/layout/layout_detail_hotel_room_item.xml
@@ -247,11 +247,19 @@
             android:text="@string/btn_more2"/>
     </RelativeLayout>
 
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/bg_background"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/btn_more"/>
+
     <RelativeLayout
         android:id="@+id/more_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_more"
+        android:layout_below="@id/line"
         android:visibility="gone"
         android:background="@color/footerview">
 
@@ -259,7 +267,8 @@
             android:id="@+id/hscroll_img"
             android:layout_width="match_parent"
             android:layout_height="78dp"
-            android:layout_marginLeft="20dp">
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp">
 
             <LinearLayout
                 android:id="@+id/more_img_list"
