--- a/app/src/main/res/layout/layout_detail_room_img_item.xml
+++ b/app/src/main/res/layout/layout_detail_room_img_item.xml
@@ -5,7 +5,7 @@
 
     <ImageView
         android:id="@+id/image_container"
-        android:layout_width="match_parent"
+        android:layout_width="122dp"
         android:layout_height="78dp"
         android:layout_centerInParent="true"
         android:layout_marginRight="10dp"
