--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -116,7 +116,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="12dp"
+                        android:layout_marginRight="24dp"
                         android:layout_toLeftOf="@id/btn_zzim">
                         <ImageView
                             android:id="@+id/icon_share"
@@ -250,6 +250,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="35dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginBottom="30dp"
                     style="?android:attr/borderlessButtonStyle"/>
 
             </LinearLayout>
