--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -206,13 +206,13 @@
                 android:layout_height="wrap_content"
                 android:textSize="13dp"
                 android:textColor="@color/purple"
-                android:text="- 단독 특가 알림, 깜짝 이벤트 등 호텔나우의 실속있는 혜택을  누구보다 빠르게 받아볼 수 있습니다."/>
+                android:text="@string/setting_message"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="13dp"
                 android:textColor="@color/termtext"
-                android:text="- 동의해주신 채널에 따라 메시지가 발송됩니다. 원하지 않으실  경우 각 채널별 수신동의를 해제해주시기 바랍니다."/>
+                android:text="@string/setting_message2"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
