--- a/app/src/main/res/layout/layout_activity_item.xml
+++ b/app/src/main/res/layout/layout_activity_item.xml
@@ -17,7 +17,7 @@
             android:id="@+id/iv_img"
             android:layout_width="wrap_content"
             android:layout_height="160dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:background="@drawable/placeholder"/>
 
         <ImageView
