--- a/app/src/main/res/layout/layout_mypage_footer.xml
+++ b/app/src/main/res/layout/layout_mypage_footer.xml
@@ -7,7 +7,8 @@
     </data>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="98dp"
         android:orientation="vertical">
 
         <LinearLayout
