--- a/app/src/main/res/layout/layout_activity_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_activity_hotdeal_item.xml
@@ -16,7 +16,7 @@
             android:id="@+id/iv_image"
             android:layout_width="290dp"
             android:layout_height="150dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:riv_corner_radius="2dp"/>
         
         <ImageView
