--- a/app/src/main/res/layout/layout_ha_footer.xml
+++ b/app/src/main/res/layout/layout_ha_footer.xml
@@ -5,11 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     
-    <Button
+    <ImageView
         android:id="@+id/bt_top"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:background="@drawable/btn_screenup"
-        android:layout_gravity="center"
-        style="?android:attr/borderlessButtonStyle"/>
+        android:layout_gravity="center" />
 </LinearLayout>
