--- a/app/src/main/res/layout/activity_fullimage.xml
+++ b/app/src/main/res/layout/activity_fullimage.xml
@@ -1,128 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white">
-
-        <LinearLayout
-            android:id="@+id/btn_back"
-            android:layout_width="24dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="12dp"
-            android:layout_centerVertical="true">
-            <ImageView
-                android:id="@+id/icon_back"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:background="@drawable/ico_titbar_back"
-                android:layout_gravity="center"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_title_hotel"
-            android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/btn_back"
-            android:singleLine="true"
-            android:maxLines="1"
-            android:textSize="16dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/purple"
-            android:gravity="left|center"
-            android:ellipsize="end" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/bg_background"
-            android:layout_below="@id/tv_title_hotel"/>
-    </RelativeLayout>
-
-    <!-- Top Sliding Banners -->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/full_item_bg">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <RelativeLayout
-            android:id="@+id/layout_info"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="238dp"
-            android:gravity="center_vertical"
-            android:layout_alignParentBottom="true"
-            android:background="@color/full_item_bg">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white">
 
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fillViewport="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="30dp"
-                android:layout_marginLeft="10dp">
-
-                <LinearLayout
-                    android:id="@+id/ll_image_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="bottom"
-                    android:orientation="horizontal"></LinearLayout>
-
-            </HorizontalScrollView>
+            <LinearLayout
+                android:id="@+id/btn_back"
+                android:layout_width="24dp"
+                android:layout_height="55dp"
+                android:layout_marginLeft="12dp"
+                android:layout_centerVertical="true">
+                <ImageView
+                    android:id="@+id/icon_back"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/ico_titbar_back"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/img_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12dp"
-                android:maxWidth="300dp"
-                android:layout_marginLeft="20dp"
-                android:padding="5dp"
+                android:id="@+id/tv_title_hotel"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/btn_back"
                 android:singleLine="true"
-                android:ellipsize="end"
-                android:textColor="@color/white7"
-                tools:text="외관사진"/>
+                android:maxLines="1"
+                android:textSize="16dp"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/purple"
+                android:gravity="left|center"
+                android:ellipsize="end" />
 
-            <TextView
-                android:id="@+id/img_title2"
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="10dp"
-                android:layout_marginLeft="20dp"
-                android:padding="5dp"
-                android:ellipsize="end"
-                android:layout_below="@+id/img_title"
-                android:maxLines="2"
-                android:textColor="@color/white7"
-                tools:text="외관사진"/>
-
-            <TextView
-                android:id="@+id/page"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_alignParentRight="true"
-                android:textColor="@color/white7"
-                android:layout_marginRight="20dp"
-                android:padding="5dp"
-                android:textSize="11dp"
-                tools:text=" 3/10 + "/>
+                android:layout_height="1dp"
+                android:background="@color/bg_background"
+                android:layout_below="@id/tv_title_hotel"/>
         </RelativeLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
+        <!-- Top Sliding Banners -->
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/layout_info" />
+            android:background="@color/full_item_bg">
+
+            <RelativeLayout
+                android:id="@+id/layout_info"
+                android:layout_width="match_parent"
+                android:layout_height="238dp"
+                android:gravity="center_vertical"
+                android:layout_alignParentBottom="true"
+                android:background="@color/full_item_bg">
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fillViewport="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginLeft="10dp">
+
+                    <LinearLayout
+                        android:id="@+id/ll_image_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="bottom"
+                        android:orientation="horizontal"></LinearLayout>
+
+                </HorizontalScrollView>
+
+                <TextView
+                    android:id="@+id/img_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:maxWidth="300dp"
+                    android:layout_marginLeft="20dp"
+                    android:padding="5dp"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:textColor="@color/white7"
+                    tools:text="외관사진"/>
+
+                <TextView
+                    android:id="@+id/img_title2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:padding="5dp"
+                    android:ellipsize="end"
+                    android:layout_below="@+id/img_title"
+                    android:maxLines="2"
+                    android:textColor="@color/white7"
+                    tools:text="외관사진"/>
+
+                <TextView
+                    android:id="@+id/page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_alignParentRight="true"
+                    android:textColor="@color/white7"
+                    android:layout_marginRight="20dp"
+                    android:padding="5dp"
+                    android:textSize="11dp"
+                    tools:text=" 3/10 + "/>
+            </RelativeLayout>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@id/layout_info" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/loading_alpha_bg">
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/loading_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:indicator="BallSpinFadeLoader"
+            app:indicator_color="@color/purple"/>
 
     </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
