--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,114 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_title"
-        android:background="@color/white"
-        app:contentInsetEnd="0dp"
-        app:contentInsetStart="0dp"
-        app:popupTheme="@style/Theme.AppCompat.NoActionBar">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_title"
+            android:background="@color/white"
+            app:contentInsetEnd="0dp"
+            app:contentInsetStart="0dp"
+            app:popupTheme="@style/Theme.AppCompat.NoActionBar">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:gravity="center_vertical">
+
+                <RelativeLayout
+                    android:id="@+id/title_back"
+                    android:layout_width="45dp"
+                    android:layout_height="55dp"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_centerInParent="true"
+                        android:background="@drawable/ico_titbar_back" />
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/re_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="55dp"
+                    android:layout_alignParentRight="true"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/purple"
+                    android:layout_marginRight="16dp"
+                    android:textSize="14dp"
+                    android:text="@string/re_search"/>
+
+                <TextView
+                    android:id="@+id/title_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/title_back"
+                    android:layout_toLeftOf="@id/re_search"
+                    android:singleLine="true"
+                    android:layout_marginTop="7dp"
+                    android:textColor="@color/purple"
+                    android:textSize="16dp"
+                    tools:text="서울"/>
+
+                <TextView
+                    android:id="@+id/subtitle_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_toRightOf="@id/title_back"
+                    android:layout_toLeftOf="@id/re_search"
+                    android:layout_below="@id/title_text"
+                    android:singleLine="true"
+                    android:textColor="@color/unselecttab"
+                    android:textSize="12dp"
+                    tools:text="강남/역삼/삼성/신사, 9/21-9/22(1박)"/>
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:gravity="center_vertical">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
-                android:id="@+id/title_back"
-                android:layout_width="45dp"
-                android:layout_height="55dp"
-                android:gravity="center_vertical">
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerInParent="true"
-                    android:background="@drawable/ico_titbar_back" />
-            </RelativeLayout>
+            <com.hotelnow.utils.SmoothPager
+                android:id="@+id/event_pager"
+                android:layout_width="match_parent"
+                android:layout_height="181dp"
+                android:layout_marginLeft="16dp"
+                android:layout_alignParentBottom="true" />
 
-            <TextView
-                android:id="@+id/re_search"
+            <LinearLayout
+                android:id="@+id/ll_count"
                 android:layout_width="wrap_content"
-                android:layout_height="55dp"
-                android:layout_alignParentRight="true"
-                android:gravity="center_vertical"
-                android:textColor="@color/purple"
-                android:layout_marginRight="16dp"
-                android:textSize="14dp"
-                android:text="@string/re_search"/>
+                android:layout_height="30dp"
+                android:background="@color/purple_cc"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_above="@id/event_pager">
 
-            <TextView
-                android:id="@+id/title_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/title_back"
-                android:layout_toLeftOf="@id/re_search"
-                android:singleLine="true"
-                android:layout_marginTop="7dp"
-                android:textColor="@color/purple"
-                android:textSize="16dp"
-                tools:text="서울"/>
-
-            <TextView
-                android:id="@+id/subtitle_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_toRightOf="@id/title_back"
-                android:layout_toLeftOf="@id/re_search"
-                android:layout_below="@id/title_text"
-                android:singleLine="true"
-                android:textColor="@color/unselecttab"
-                android:textSize="12dp"
-                tools:text="강남/역삼/삼성/신사, 9/21-9/22(1박)"/>
+                <TextView
+                    android:id="@+id/total_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    tools:text="총 42개의 숙소"
+                    android:textColor="@color/white"
+                    android:gravity="center_vertical"
+                    android:layout_margin="5dp"
+                    android:paddingRight="9dp"
+                    android:paddingLeft="9dp"
+                    android:textSize="12dp" />
+            </LinearLayout>
         </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
+    </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/wrapper"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/loading_alpha_bg">
 
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <com.hotelnow.utils.SmoothPager
-            android:id="@+id/event_pager"
-            android:layout_width="match_parent"
-            android:layout_height="181dp"
-            android:layout_marginLeft="16dp"
-            android:layout_alignParentBottom="true" />
-
-        <LinearLayout
-            android:id="@+id/ll_count"
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/loading_indicator"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:background="@color/purple_cc"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="16dp"
-            android:layout_above="@id/event_pager">
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:indicator="BallSpinFadeLoader"
+            app:indicator_color="@color/purple"/>
 
-            <TextView
-                android:id="@+id/total_item"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                tools:text="총 42개의 숙소"
-                android:textColor="@color/white"
-                android:gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:paddingRight="9dp"
-                android:paddingLeft="9dp"
-                android:textSize="12dp" />
-        </LinearLayout>
     </RelativeLayout>
-</LinearLayout>
+
+</RelativeLayout>
