--- a/app/src/main/res/layout/activity_review_hotel.xml
+++ b/app/src/main/res/layout/activity_review_hotel.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/toolbar"
@@ -200,7 +201,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="교통 \u0026 위치접근성"
+                        android:text="교통 \u0026 위치"
                         android:textSize="11dp"
                         android:textColor="@color/blacktxt"/>
                 </LinearLayout>
@@ -420,4 +421,20 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="23dp"
         style="?android:attr/borderlessButtonStyle"/>
+
+    <RelativeLayout
+        android:id="@+id/wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/loading_alpha_bg">
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/loading_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:indicator="BallSpinFadeLoader"
+            app:indicator_color="@color/purple"/>
+    </RelativeLayout>
 </RelativeLayout>
