--- a/app/src/main/res/layout/layout_theme_speical_item.xml
+++ b/app/src/main/res/layout/layout_theme_speical_item.xml
@@ -290,7 +290,7 @@
     <RelativeLayout
         android:id="@+id/layout_top"
         android:layout_width="match_parent"
-        android:layout_height="208dp"
+        android:layout_height="277dp"
         android:visibility="visible">
 
         <ImageView
@@ -323,6 +323,15 @@
             android:layout_marginRight="10dp"
             android:textSize="14dp"
             android:text=""/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="69dp"
+            android:gravity="center"
+            android:layout_below="@+id/iv_top"
+            android:textColor="@color/graytxt"
+            android:textSize="14dp"
+            android:text="할인쿠폰은 선착순 진행되며 조기 마감될 수 있습니다."/>
 
         <LinearLayout
             android:layout_width="match_parent"
