--- a/app/src/main/res/layout/activity_special_themehotel.xml
+++ b/app/src/main/res/layout/activity_special_themehotel.xml
@@ -104,4 +104,21 @@
                 tools:text="관심 상품 담기 성공"/>
         </LinearLayout>
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/loading_alpha_bg">
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/loading_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:indicator="BallSpinFadeLoader"
+            app:indicator_color="@color/purple"/>
+
+    </RelativeLayout>
 </RelativeLayout>
