--- a/app/src/main/res/layout/layout_map_item.xml
+++ b/app/src/main/res/layout/layout_map_item.xml
@@ -23,6 +23,7 @@
             android:gravity="center_vertical">
 
             <ImageView
+                android:id="@+id/img_star"
                 android:layout_width="10dp"
                 android:layout_height="9dp"
                 android:background="@drawable/ico_starpoint_press"
@@ -38,6 +39,7 @@
                 tools:text="4.5"/>
 
             <View
+                android:id="@+id/text_bar"
                 android:layout_width="1dp"
                 android:layout_height="10dp"
                 android:background="@color/textbar"
