--- a/app/src/main/res/layout/layout_theme_speical_item.xml
+++ b/app/src/main/res/layout/layout_theme_speical_item.xml
@@ -325,6 +325,7 @@
             android:text=""/>
 
         <TextView
+            android:id="@+id/show_text"
             android:layout_width="match_parent"
             android:layout_height="69dp"
             android:gravity="center"
@@ -337,7 +338,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_below="@+id/iv_top">
+            android:layout_below="@+id/show_text">
 
             <View
                 android:layout_width="match_parent"
