--- a/app/src/main/res/layout/layout_search_banner_item.xml
+++ b/app/src/main/res/layout/layout_search_banner_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/image_container"
@@ -13,5 +14,39 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:background="@drawable/image_view_gradient" />
+        android:background="@color/theme_dim" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:orientation="vertical"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/banner_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textSize="14dp"
+            android:gravity="center"
+            tools:text="궁궐투어부터 전시회, 만화카페까지 즐거움이 가득한 데이트"/>
+
+        <TextView
+            android:id="@+id/banner_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:layout_marginTop="6dp"
+            tools:text="서울 데이트 추천"/>
+
+    </LinearLayout>
 </RelativeLayout>
