--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -9,7 +9,7 @@
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:scaleType="fitXY"
-       android:background="@drawable/spalsh"/>
+       android:adjustViewBounds="true"
+       android:background="@drawable/spalsh" />
 
 </android.support.constraint.ConstraintLayout>
