--- a/app/src/main/res/layout/dialog_frontpopup.xml
+++ b/app/src/main/res/layout/dialog_frontpopup.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/popup_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
         </RelativeLayout>
     </LinearLayout>
