--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -3,18 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="206dp"
+    android:layout_height="198dp"
     android:background="@color/white">
 
     <com.hotelnow.utils.ViewPagerCustom
         android:id="@+id/autoViewPager"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:scaleType="fitXY"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="13dp"/>
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:id="@+id/page"
@@ -29,7 +27,7 @@
         android:paddingBottom="5dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="18dp"
         android:layout_marginRight="24dp"
         tools:text=" 3/10 + "/>
 </RelativeLayout>
