수정사항 적용

--- a/app/src/main/res/layout/layout_detail_hotel_room_item.xml
+++ b/app/src/main/res/layout/layout_detail_hotel_room_item.xml
@@ -233,6 +233,7 @@
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:scaleType="fitXY"
+            android:layout_marginRight="5dp"
             android:layout_alignParentRight="true"
             android:background="@drawable/btn_detail_open"/>
 
