--- a/app/src/main/res/layout/layout_activity_item.xml
+++ b/app/src/main/res/layout/layout_activity_item.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="160dp"
             android:scaleType="centerCrop"
-            android:background="@drawable/placeholder"/>
+            android:background="@color/holder_c"/>
 
         <ImageView
             android:id="@+id/iv_favorite"
@@ -97,7 +97,8 @@
             android:background="@color/textbar"
             android:layout_toRightOf="@+id/tv_rate"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="8dp" />
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"/>
 
         <TextView
             android:id="@+id/category"
@@ -106,7 +107,6 @@
             android:textColor="@color/termtext"
             android:layout_toRightOf="@+id/v_bar"
             android:textSize="12dp"
-            android:layout_marginLeft="8dp"
             android:layout_centerVertical="true"
             tools:text="특2급"/>
 
@@ -236,7 +236,7 @@
             android:layout_marginBottom="11dp"
             android:textSize="13dp"
             android:textColor="@color/purple"
-            android:maxLines="3"
+            android:maxLines="2"
             android:ellipsize="end"
             tools:text="선착순 5천원 할인쿠폰 프로모션 진행 중! (9/10~9/23 예약기간 내 재발급 가능)"/>
     </LinearLayout>
