--- a/app/src/main/res/layout/layout_detail_hotel.xml
+++ b/app/src/main/res/layout/layout_detail_hotel.xml
@@ -123,6 +123,7 @@
         </LinearLayout>
 
         <RelativeLayout
+            android:id="@+id/review0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp">
