--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -227,8 +227,9 @@
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:text="@string/calendar_complate"
-            android:background="@color/board_line"
+            android:background="@drawable/cal_unactive_round"
             android:textColor="@color/white"
             style="?android:attr/borderlessButtonStyle"/>
     </LinearLayout>
