--- a/app/src/main/res/layout/activity_reservation_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_reservation_hotel_detail.xml
@@ -119,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="160dp"
                     android:scaleType="fitXY"
-                    android:background="@drawable/placeholder"/>
+                    android:background="@color/holder_c"/>
 
                 <TextView
                     android:id="@+id/booking_status"
