--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -5,7 +5,6 @@
     android:gravity="center"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:layout_marginTop="15dp"
         android:layout_width="300dp"
@@ -34,8 +33,7 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="50dp"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
@@ -44,9 +42,8 @@
 
             <Button
                 android:id="@+id/left"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="@string/alert_confrim"
                 android:textColor="@color/white"
