--- a/app/src/main/res/layout/dialog_frontpopup.xml
+++ b/app/src/main/res/layout/dialog_frontpopup.xml
@@ -14,13 +14,13 @@
             android:id="@+id/popup_bg"
             android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/popup_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"/>
 
         </RelativeLayout>
     </LinearLayout>
