--- a/app/src/main/res/layout/layout_activity_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_activity_hotdeal_item.xml
@@ -64,13 +64,13 @@
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
                 android:background="@color/textbar"/>
 
             <TextView
                 android:id="@+id/tv_catagory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
                 android:textSize="11dp"
                 android:background="@color/white"
                 android:textColor="@color/blacktxt"
