--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="198dp"
+    android:layout_height="213dp"
+    android:layout_marginTop="15dp"
     android:background="@color/white">
 
     <com.hotelnow.utils.ViewPagerCustom
@@ -12,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginBottom="15dp"/>
 
     <TextView
         android:id="@+id/page"
@@ -27,7 +28,7 @@
         android:paddingBottom="5dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="33dp"
         android:layout_marginRight="24dp"
         tools:text=" 3/10 + "/>
 </RelativeLayout>
