--- a/app/src/main/res/layout/layout_map_item.xml
+++ b/app/src/main/res/layout/layout_map_item.xml
@@ -43,7 +43,8 @@
                 android:layout_width="1dp"
                 android:layout_height="10dp"
                 android:background="@color/textbar"
-                android:layout_marginLeft="3dp" />
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="3dp"/>
 
             <TextView
                 android:id="@+id/tv_category"
@@ -51,7 +52,6 @@
                 android:layout_height="wrap_content"
                 android:textSize="12dp"
                 android:textColor="@color/termtext"
-                android:layout_marginLeft="3dp"
                 tools:text="특2급"/>
 
         </LinearLayout>
