--- a/app/src/main/res/layout/layout_reservation_stay_item.xml
+++ b/app/src/main/res/layout/layout_reservation_stay_item.xml
@@ -11,10 +11,10 @@
         android:layout_height="0dp" />
     <ImageView
         android:id="@+id/iv_img"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="160dp"
         android:scaleType="fitXY"
-        android:background="@drawable/placeholder"/>
+        android:background="@color/holder_c"/>
 
     <TextView
         android:id="@+id/booking_status"
