--- a/app/src/main/res/layout/layout_subcity_item.xml
+++ b/app/src/main/res/layout/layout_subcity_item.xml
@@ -19,6 +19,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="13dp"
             android:layout_marginRight="15dp"
+            android:textSize="14dp"
             tools:text="xxxxx"/>
 
         <ImageView
